fix: revert GC workarounds — crashes were caused by RAM overclocking
Remove ParallelGCThreads=2 workaround and G1GC with 6G heap. Switch to
ZGC with 4G heap. All 110 spark tests pass. The SIGSEGV crashes were
caused by 4x48GB non-ECC RAM running EXPO at 6000MHz, not JVM bugs.